# netbox-attachments

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-test-pypi.yml
docs/: certification-checklist.md  compatibility.md  configuration.md  index.md  installation.md  release-process.md  usage.md
netbox_attachments/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  search.py  tables.py  template_content.py  urls.py  utils.py  version.py  views.py
netbox_attachments/api/: serializers.py  urls.py  views.py
netbox_attachments/management/: cleanup.py  utils.py
netbox_attachments/management/commands/: remove_orphaned_netbox_attachments.py
netbox_attachments/migrations/: 0001_initial.py  0002_alter_netboxattachment_options_and_more.py  0003_alter_netboxattachment_name.py  0004_netboxattachment_size_and_more.py  0005_netboxattachment_description.py  0006_rename_content_type_netboxattachment_object_type.py  0007_alter_netboxattachment_object_type.py  0008_create_netboxattachmentassignment.py  0009_data_migrate_assignments.py  0010_remove_attachment_fk_fields.py  0011_netboxattachmentassignment_index.py
netbox_attachments/templates/netbox_attachments/: add_attachment_button.html  generic_tab_list.html  netbox_attachment_edit.html  netbox_attachment_link.html  netbox_attachment_panel.html  netboxattachment.html  netboxattachment_list.html  netboxattachmentassignment.html  netboxattachmentassignment_delete.html
netbox_attachments/tests/: README.md  test_configuration.py  test_forms_pending_assignment.py  test_new_features.py  test_signals.py  test_template_extensions.py
(+15 files in other folders)
